syntax = "proto3";
import "common.proto";
option cc_generic_services = true;

message TeamInfoS2CRequest
{
}

message TeamInfoS2CResponse
{
	ClientError error = 1;
}


service ClientPlayerTeamService
{
  rpc TeamInfoNotify (TeamInfoS2CRequest) returns (TeamInfoS2CResponse);
}